--- a/branches/piet/foreignExchange/foreignExchange-war/web/css/styles.css
+++ b/branches/piet/foreignExchange/foreignExchange-war/web/css/styles.css
@@ -2,6 +2,11 @@ body, #header, #footer {
 	width:940px;
 }
 
+#out{
+    background-color: red;
+    border: red
+}
+
 body {
 	background: #d0d0d0 url(../img/site-background.png) repeat-x 0 0;
 	color: #333;
