Updated working approval and authorisation  for create view is now working fixed issues layout on create
Using latest database from repository.

--- a/branches/Aaron/approval/approval-war/web/css/styles.css
+++ b/branches/Aaron/approval/approval-war/web/css/styles.css
@@ -91,3 +91,14 @@ h3 {
 a:link, a:visited {
 	color: #094c93;
 }
+
+/*
+need to ask Marco how to fix the table boarders
+http://stackoverflow.com/questions/9892654/primefaces-overrides-my-custom-css-style
+http://stackoverflow.com/questions/8578494/how-to-override-stylesheets-of-primefaces
+for approval
+table {
+    border-width: 0 !important;
+    border-color: white !important;
+}
+*/
