Logo is clickable.

--- a/branches/marco/Template/web/template.xhtml
+++ b/branches/marco/Template/web/template.xhtml
@@ -14,7 +14,11 @@
     <h:body>        
         <div id="header">
             <div id="logo">
-                <h:graphicImage value="img/logo.png" alt="Monash South Africa - A campus of Monash Univeristy AUstralia"/>
+                <h:form>
+                    <h:commandLink action="template.xhtml">
+                        <h:graphicImage value="img/logo.png" alt="Monash South Africa - A campus of Monash Univeristy Australia"/>
+                    </h:commandLink>
+                </h:form>
             </div>
 
             <ul>
