--- a/mtams/mtams-war/web/template/templateClient.xhtml
+++ b/mtams/mtams-war/web/template/templateClient.xhtml
@@ -2,17 +2,18 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:ui="http://java.sun.com/jsf/facelets"
+      xmlns:h="http://java.sun.com/jsf/html"
       xmlns:p="http://primefaces.org/ui">
 
-    <body>
+    <h:body>
 
-        <ui:composition template="./template/template.xhtml">
+        <ui:composition template="./template.xhtml">
 
             <ui:define name="content">
-                ADMIN HOME
+                <h:outputText styleClass="h3" value="Welcome to my fucking Template :P"/>
             </ui:define>
 
         </ui:composition>
 
-    </body>
+    </h:body>
 </html>
