--- a/mtams/mtams-war/web/resources/css/override.css
+++ b/mtams/mtams-war/web/resources/css/override.css
@@ -11,40 +11,62 @@
 
 */
 
+
+
 .ui-panelgrid td {
     border: none;
     float: left;
 }
 
 
-/*
-
-*/
 .ui-widget-content tr {
-    /*
-    border: navy;
-    border-color: navy;
-    border-width: 5px;
-    */
+
     border: none;
 }
+/*
+*/
 
 td.columnMessage  {
-    width: 30%;
+    width: 20%;
     border: none;
 }
 
 td.columnLabel  {
     width: 250px;
     border: none;
+    text-align: right;
 }
+
 
 /*
 Over ride need to match department dropdown width
-*/
+
 .inputWidthDepartment {
-    width: 255px;
+    width: 257px;
 }
+
+input {
+    width: 163px;
+}
+*/
+
+.inputWidthDepartment input {
+    width: 257px;
+}
+
 .inputWidth {
     width: 163px;
+}
+/*
+*/
+
+.columnHeading {
+  
+    font-weight: bolder;
+    width: 175px;
+    text-align: center;
+}
+
+.butCalc {
+    width: 171px;
 }
