- After Login Page user gets redirected. - Initial proper navigation included - User role and name included at top

--- a/branches/megamerge/mtams/mtams-war/web/resources/css/styles.css
+++ b/branches/megamerge/mtams/mtams-war/web/resources/css/styles.css
@@ -59,7 +59,7 @@ p.legal {
     color: #666;
 }
 
-form {
+.form-2 {
     padding:10px;
     overflow: hidden;
 }
@@ -213,7 +213,7 @@ body {
     left:0px;
 }
 
-.ui-menu .ui-menuitem {
+.ui-menu-list {
     margin: 1px 15px !important;
 }
 
