my final fixes for the entire system for HCI meeting

--- a/branches/megamerge/mtams/mtams-war/web/template/template.xhtml
+++ b/branches/megamerge/mtams/mtams-war/web/template/template.xhtml
@@ -49,7 +49,7 @@
 
             <div id="nav">
                 <h:form>
-                    <p:menubar autoDisplay="false" model="#{menuBean.model}" rendered="#{sessionBean.checkActive()}"/>  
+                    <p:menubar autoDisplay="false" model="#{menuBean.model}" rendered="#{sessionBean.checkMenuActive()}"/>  
                 </h:form>
             </div>
 
