--- a/mtams/mtams-war/web/resources/css/override.css
+++ b/mtams/mtams-war/web/resources/css/override.css
@@ -2,6 +2,17 @@
 
 /* Aarons */
 
+/* L O O K U P   D I A L O U G */
+
+.dlgCurrency {
+    /*
+    width: 500px;
+    */
+}
+.divCurrency{
+    width: 550px;
+}
+
 /* F I N A L C O S T I N G */
 
 /*
@@ -11,7 +22,7 @@
 
 */
 
-
+/*
 
 .ui-panelgrid td {
     border: none;
@@ -23,8 +34,8 @@
 
     border: none;
 }
-/*
-*/
+
+
 
 td.columnMessage  {
     width: 20%;
@@ -32,19 +43,26 @@ td.columnMessage  {
 }
 
 td.columnLabel  {
-    /*
+    
     padding-top: 5px;
     
     margin-top: 20px;
-    */
+    
     margin-top: 5px;
     width: 250px;
     border: none;
     text-align: left;
 }
 
+.columnvalue1 {
+    
+}
 
-/*
+.columnvalue2 {
+    
+}
+
+
 Over ride need to match department dropdown width
 
 .inputWidthDepartment {
@@ -54,7 +72,7 @@ Over ride need to match department dropdown width
 input {
     width: 163px;
 }
-*/
+
 
 .inputWidthDepartment input {
     width: 257px;
@@ -63,8 +81,8 @@ input {
 .inputWidth {
     width: 163px;
 }
-/*
-*/
+
+
 
 .columnHeading {
   
@@ -75,4 +93,4 @@ input {
 
 .butCalc {
     width: 171px;
-}
+}*/
