--- a/mtams/mtams-war/web/template/template.xhtml
+++ b/mtams/mtams-war/web/template/template.xhtml
@@ -24,6 +24,15 @@
                  */
             });
         </script>
+        <!--
+        Need to check with marco, the style sheet ordering was not allowing our custom style sheet to load
+        last. This was recommend as a fix by optimus prime.
+        http://forum.primefaces.org/viewtopic.php?f=3&t=12807&start=50#p45833
+        http://blog.primefaces.org/?p=1433
+        we can comment out the following line to go back to the old way.
+        -->
+        <link type="text/css" rel="stylesheet" href="resources/css/override.css" />
+        
         <title>MSA Travel Application Management System</title>
     </h:head>
 
