--- a/branches/megamerge/mtams/mtams-war/web/template/template.xhtml
+++ b/branches/megamerge/mtams/mtams-war/web/template/template.xhtml
@@ -9,7 +9,7 @@
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
         <h:outputStylesheet library="css" name="styles.css"/>
         <h:outputScript library="primefaces" name="jquery/jquery.js"/>
-        <script type="text/javascript" src="resources/jquery.stickyPanel.min.js"></script>
+        <script type="text/javascript" src="#{request.contextPath}/resources/jquery.stickyPanel.min.js"></script>
         <script type="text/javascript">
             jQuery().ready(function() {
                 var stickyPanelOptions = {
@@ -31,7 +31,7 @@
         http://blog.primefaces.org/?p=1433
         we can comment out the following line to go back to the old way.
         -->
-        <link type="text/css" rel="stylesheet" href="resources/css/override.css" />
+        <link type="text/css" rel="stylesheet" href="#{request.contextPath}/resources/css/override.css" />
         
         <title>MSA Travel Application Management System</title>
     </h:head>
@@ -42,7 +42,7 @@
                 <div id="logo">
                     <h:form>
                         <h:commandLink action="#{sessionBean.homePage()}">
-                            <h:graphicImage value="resources/img/logo.png" alt="Monash South Africa - A campus of Monash Univeristy Australia"/>
+                            <h:graphicImage value="/resources/img/logo.png" alt="Monash South Africa - A campus of Monash Univeristy Australia"/>
                         </h:commandLink>
                     </h:form>
                 </div>
