--- a/mtams/mtams-war/web/template/currencyDialog.xhtml
+++ b/mtams/mtams-war/web/template/currencyDialog.xhtml
@@ -15,7 +15,7 @@
 <p:dialog header="Header Text" widgetVar="dlgcurrency">
                 -->
             </ui:remove>
-            <p:dialog header="Header Text" widgetVar="#{widgetVarParam}">
+            <p:dialog header="Currency" widgetVar="#{widgetVarParam}">
                 <div id="DTdivtest" class="divCurrency" >
 
                     <h:form id="Dcurr" styleClass="test"> 
@@ -29,7 +29,7 @@
                                      > 
 
                             <p:ajax event="rowSelect" 
-                                    update="#{updateIDParam}"
+                                    update="#{updateIDParam2}"
                                     />
 
                             <p:ajax event="rowSelect" 
