changes made to application create and edit. also some changes to currencyDialog.xhtml and CRCDialog.xhtml in order to trim off the details that the user will no longer need such as how many entities are in the list.

--- a/branches/megamerge/mtams/mtams-war/web/template/CRCDialog.xhtml
+++ b/branches/megamerge/mtams/mtams-war/web/template/CRCDialog.xhtml
@@ -50,7 +50,7 @@ country
 
 
                             <p:column headerText="Country Name"
-                                      footerText="contains"
+                                      
                                       filterBy="#{country.name}"
                                       filterMatchMode="contains"
                                       >  
@@ -59,8 +59,8 @@ country
 
 
 
-                            <p:column headerText="Country code3"
-                                      footerText="contains"
+                            <p:column headerText="Country code"
+                                      
                                       filterBy="#{country.code3}"
                                       filterMatchMode="contains"
                                       >  
@@ -128,7 +128,7 @@ country
 
 
                             <p:column headerText="Region Name"
-                                      footerText="contains"
+                                      
 
                                       >  
                                 #{region.name}
@@ -196,14 +196,14 @@ country
 
 
                             <p:column headerText="Region Name"
-                                      footerText="contains"
+                                      
                          
                                       >  
                                 #{city.name}
                             </p:column>  
 
                             <p:column headerText="Region Code" 
-                                      footerText="contains"
+                                      
       
                                       >  
                                 #{city.region}
